# food-delivery-fastapi

./: #food-delivery.drawio  .gitignore  Dockerfile  docker-compose.yml  food-delivery.drawio  pyproject.toml  schemas.drawio
app/: config.py  dependencies.py  main.py
app/auth/: auth.py  database.py  manager.py  schemas.py
app/config/: fastapi_settings.py
app/models/: delivery.py  models.py  user.py
app/routers/: admin.py  courier.py  courier_worker.py  delivery.py  kitchen_worker.py  routers.py  users.py
app/schemas/: cart.py  delivery.py  dish.py  order.py  restaurant.py  user.py
app/services/: admin_service.py  courier_service.py  customer_service.py
app/shcemas/: delivery.py  user.py
app/test/: cart_test.py  courier_test.py  delivery_test.py  registration_test.py
app/utils/: customer_location.py  dish.py
front/: Dockerfile  package-lock.json  package.json
front/src/: App.jsx  main.jsx
front/src/components/: AddBalance.jsx  AdminPanel.jsx  Cart.js  CourierPage.jsx  CourierWorkerRegister.jsx  Couriers.jsx  CreateOrder.jsx  Customers.jsx  DishCategories.jsx  DishList.js  Dishes.jsx  Header.jsx  KitchenOrders.jsx  Login.jsx  MainPage.jsx  OrderFrom.js  OrderFrom.jsx  OrderPage.jsx  Orders.jsx  Register.jsx  RegisterAdmin.jsx  UpdateLocation.jsx
front/src/components/images/: index.html  style.css
front/src/components/styles/: AddBalance.css  AdminPanel.css  CourierPage.css  Dishes.css  KitchenOrders.css  Login.css  MainPage.css  Order.css  Register.css  RegisterAdmin.css  Table.tsx  UpdateLocation.css  header.css  style.css
java_service/: Dockerfile  pom.xml
(+25 files in other folders)
