[tool.poetry]
name = "food-delivery"
version = "0.1.0"
description = ""
authors = ["RubiFoc <zhenya20057@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
python-dotenv = "^1.0.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
psycopg = "^3.2.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
