[tool.poetry]
name = "food-delivery"
version = "0.1.0"
description = ""
authors = ["RubiFoc <zhenya20057@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
python-dotenv = "^1.0.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
psycopg = "^3.2.2"
psycopg2-binary = "^2.9.9"
geoalchemy2 = "^0.15.2"
pytest = "^8.3.3"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
